Refactor hero section text for clarity and update footer alignment for improved layout

--- a/home.html
+++ b/home.html
@@ -307,7 +307,7 @@
               <div class="hero-label" data-animate="fade-up">
                 <span class="label-dot"></span>
                 <span class="label-text"
-                  >New Agency • Full Focus • Fast Delivery • Fair Pricing</span
+                  > Full Focus • Fast Delivery • Fair Pricing</span
                 >
               </div>
 
@@ -317,10 +317,8 @@
               </h1>
 
               <p class="hero-subtitle" data-animate="fade-up" data-delay=".2s">
-                We're IP—just over a month old and already delivering real
-                projects. Started as a web dev agency, now offering complete
-                digital solutions. We're new, affordable, and eager to prove
-                ourselves with your project.
+Most teams juggle five different agencies for one digital outcome. We thought that made no sense.
+So we built something different. Keep scrolling.
               </p>
 
               <div class="hero-ctas" data-animate="fade-up" data-delay=".1s">
@@ -388,10 +386,10 @@
                     <span class="mini-number">100%</span>
                     <span class="mini-label">ON TIME</span>
                   </div>
-                  <div class="mini-stat">
+                  <!-- <div class="mini-stat">
                     <span class="mini-number">2</span>
                     <span class="mini-label">CLIENTS</span>
-                  </div>
+                  </div> -->
                 </div>
 
                 <!-- Card 4 - Live Indicator -->
@@ -416,113 +414,120 @@
       </section>
 
       <!-- About Section with Side-by-Side Layout -->
-      <section class="about-section" id="about">
-        <div class="container">
-          <div class="about-grid">
-            <div class="about-content" data-animate="fade-up">
-              <h2 class="section-title">Why Choose a Startup Agency?</h2>
-              <p class="section-subtitle">
-                As a startup, we give your project our full attention. No
-                distractions, no shortcuts—just focused work, fast delivery, and
-                fair prices. We're building our name one happy client at a time,
-                starting with you.
+<section class="about-section" id="about">
+  <div class="container">
+    <div class="about-grid">
+      <div class="about-content" data-animate="fade-up">
+        <h2 class="section-title">Why Work With a Team Like Ours?</h2>
+        <p class="section-subtitle">
+          Most businesses don’t struggle because of a lack of ideas—they struggle because their digital work keeps getting delayed, complicated, or overpriced. 
+          We built a team that solves those problems differently. No noise, no layers… just progress.
+        </p>
+
+        <div class="value-props">
+
+          <div class="value-item">
+            <div class="value-icon">$</div>
+            <div class="value-content">
+              <h4>Fair Pricing</h4>
+              <p>
+                You won’t pay for inflated titles or a huge office. You pay only for the work that actually moves your project forward.
               </p>
-              <div class="value-props">
-                <div class="value-item">
-                  <div class="value-icon">$</div>
-                  <div class="value-content">
-                    <h4>Fair Pricing</h4>
-                    <p>
-                      We're new, so our prices are competitive. You get
-                      high-quality work without breaking the bank.
-                    </p>
-                  </div>
-                </div>
-                <div class="value-item">
-                  <div class="value-icon">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="34"
-                      height="34"
-                      viewBox="0 0 34 34"
-                      id="lightning"
-                    >
-                      <g id="layer_1">
-                        <path
-                          d="M19.842 20.124H25.8007C26.2315 20.124 26.5825 19.7731 26.5825 19.3422 26.5825 19.1327 26.4983 18.94 26.3631 18.8005L12.5289 2.0279C12.2559 1.6974 11.7635 1.6483 11.433 1.921 11.1909 2.1203 11.1027 2.4384 11.1764 2.7235H11.1725L14.1602 13.8779H8.1992C7.7683 13.8779 7.4174 14.2288 7.4174 14.6597 7.4174 14.8689 7.5016 15.0619 7.6368 15.2014L21.4733 31.9717C21.746 32.3022 22.2386 32.3515 22.5689 32.0786 22.811 31.8796 22.8994 31.5615 22.8254 31.2761H22.8294ZM24.1469 18.5604H18.8569 18.824C18.7563 18.5604 18.6908 18.5686 18.6231 18.5871 18.2064 18.6979 17.9583 19.1268 18.0689 19.5432L20.3919 28.2146 9.8529 15.4414H15.1449 15.1778C15.2456 15.4414 15.3111 15.4332 15.3788 15.4148 15.7955 15.304 16.0438 14.8751 15.933 14.4584L13.6103 5.7869Z"
-                          transform="matrix(1 0 0 -1 0 34)"
-                        ></path>
-                      </g>
-                    </svg>
-                  </div>
-                  <div class="value-content">
-                    <h4>Fast & Focused</h4>
-                    <p>
-                      No endless meetings. We work fast and stay focused on
-                      delivering your project on time.
-                    </p>
-                  </div>
-                </div>
-                <div class="value-item">
-                  <div class="value-icon">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-bar-chart"
-                    >
-                      <line x1="12" y1="20" x2="12" y2="10"></line>
-                      <line x1="18" y1="20" x2="18" y2="4"></line>
-                      <line x1="6" y1="20" x2="6" y2="16"></line>
-                    </svg>
-                  </div>
-                  <div class="value-content">
-                    <h4>Real Results Already</h4>
-                    <p>
-                      We've delivered websites for Dr. Naglaa Clinic and Teacher
-                      Ahmed Fadl. Your project could be next.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="about-visual" data-animate="fade-left" data-delay=".2s">
-              <div class="tech-stack-showcase">
-                <div class="tech-category">
-                  <h4>Full Transparency</h4>
-                  <div class="tech-items">
-                    <span class="tech-item">Know what we're doing</span>
-                    <span class="tech-item">Regular progress updates</span>
-                    <span class="tech-item">No hidden costs</span>
-                  </div>
-                </div>
-                <div class="tech-category">
-                  <h4>Direct Communication</h4>
-                  <div class="tech-items">
-                    <span class="tech-item">No middlemen, just us</span>
-                    <span class="tech-item">Quick response guaranteed</span>
-                    <span class="tech-item">Your ideas shape the project</span>
-                  </div>
-                </div>
-                <div class="tech-category">
-                  <h4>Quality Guaranteed</h4>
-                  <div class="tech-items">
-                    <span class="tech-item">Revisions included</span>
-                    <span class="tech-item">Launch support</span>
-                    <span class="tech-item">We stand by our work</span>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
+
+          <div class="value-item">
+            <div class="value-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="34"
+                height="34"
+                viewBox="0 0 34 34"
+                id="lightning"
+              >
+                <g id="layer_1">
+                  <path
+                    d="M19.842 20.124H25.8007C26.2315 20.124 26.5825 19.7731 26.5825 19.3422 26.5825 19.1327 26.4983 18.94 26.3631 18.8005L12.5289 2.0279C12.2559 1.6974 11.7635 1.6483 11.433 1.921 11.1909 2.1203 11.1027 2.4384 11.1764 2.7235H11.1725L14.1602 13.8779H8.1992C7.7683 13.8779 7.4174 14.2288 7.4174 14.6597 7.4174 14.8689 7.5016 15.0619 7.6368 15.2014L21.4733 31.9717C21.746 32.3022 22.2386 32.3515 22.5689 32.0786 22.811 31.8796 22.8994 31.5615 22.8254 31.2761H22.8294ZM24.1469 18.5604H18.8569 18.824C18.7563 18.5604 18.6908 18.5686 18.6231 18.5871 18.2064 18.6979 17.9583 19.1268 18.0689 19.5432L20.3919 28.2146 9.8529 15.4414H15.1449 15.1778C15.2456 15.4414 15.3111 15.4332 15.3788 15.4148 15.7955 15.304 16.0438 14.8751 15.933 14.4584L13.6103 5.7869Z"
+                    transform="matrix(1 0 0 -1 0 34)"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="value-content">
+              <h4>Fast & Focused</h4>
+              <p>
+                We cut the usual drama out of the process. Clear goals, fast execution, and updates that actually matter.
+              </p>
+            </div>
+          </div>
+
+          <div class="value-item">
+            <div class="value-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-bar-chart"
+              >
+                <line x1="12" y1="20" x2="12" y2="10"></line>
+                <line x1="18" y1="20" x2="18" y2="4"></line>
+                <line x1="6" y1="20" x2="6" y2="16"></line>
+              </svg>
+            </div>
+            <div class="value-content">
+              <h4>Real Results Already</h4>
+              <p>
+                From clinics to educators, we’ve helped brands upgrade their online presence without overthinking it. Yours could be next.
+              </p>
+            </div>
+          </div>
+
         </div>
-      </section>
+      </div>
+
+      <div class="about-visual" data-animate="fade-left" data-delay=".2s">
+        <div class="tech-stack-showcase">
+
+          <div class="tech-category">
+            <h4>Full Transparency</h4>
+            <div class="tech-items">
+              <span class="tech-item">See exactly what’s being done</span>
+              <span class="tech-item">Clear timelines, clear progress</span>
+              <span class="tech-item">Surprises only in the good way</span>
+            </div>
+          </div>
+
+          <div class="tech-category">
+            <h4>Direct Communication</h4>
+            <div class="tech-items">
+              <span class="tech-item">No account managers or loops</span>
+              <span class="tech-item">Quick decisions, quick updates</span>
+              <span class="tech-item">Your vision leads the build</span>
+            </div>
+          </div>
+
+          <div class="tech-category">
+            <h4>Quality Guaranteed</h4>
+            <div class="tech-items">
+              <span class="tech-item">We refine until it fits perfectly</span>
+              <span class="tech-item">Support through launch</span>
+              <span class="tech-item">We’re here long after delivery</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
       <!-- Services in Masonry Layout -->
       <section class="services-section" id="services">
@@ -1182,10 +1187,6 @@
             &copy; <span id="copyrightYear"></span> Infinite Pixels. All rights
             reserved.
           </p>
-          <div class="footer-bottom-links">
-            <a href="/privacy">Privacy Policy</a>
-            <a href="/terms">Terms of Service</a>
-          </div>
         </div>
       </div>
     </footer>
